css/style.css
* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
}
html,
body {
  margin: 0;
  padding: 0;
}
body {
  font-family: var(--font), Helvetica, sans-serif;
}
.cookie__hiden {
  display: none;
}
.cookie {
position: fixed;
top: 60vh;
right: 0;
width: 95vw;
padding: 1em;
z-index: 5;

background-color: var(--basic-color);
border-radius: 3px;
font-size: clamp(12px, 2vw, 1em);
color: var(--font-color);
}
.cookie__box {
  width: 100%;
  padding-top: 10px;
  display: flex;
}
.cookie__box__icon {
  width: clamp(25px, 4vw, 70px);
  height: clamp(25px, 4vw, 70px);
  padding: .2em;
}
.cookie__box__description {
  margin: 0;
  padding-left: .5em;
}
.cookie__box__description--link {
  text-decoration: none;
  color: var(--secondary-color);
}
.cookie__box__description--link:hover {
  text-decoration: underline;
}
.cookie__button {
  float: right;
  width: clamp(100px, 15vw, 200px);
  height: 2.5em;
  margin: 10px 1em 0 0;
  padding-left: .5em;

  color: var(--basic-color);
  font-size: 1em;
  letter-spacing: 2px;
  background-color: var(--secondary-color);
  border-radius: 5px;
}
.cookie__button:hover {
  color: var(--secondary-color);
  font-weight: bolder;
  background-color: var(--basic-color);
  border: 2px solid var(--secondary-color);
}

.container {
  width: 100%;
  padding: 0 0.75rem 0 0.75rem;
  margin: 0 auto;
  color: var(--font-color);
}
/* Section: NAV */
.navigation {
  position: fixed;
  top: 0px;
  width: 100%;
  background: rgba(255, 255, 255, .9);
  border-bottom: 1px solid rgba(39, 39, 39, 0.2);
  z-index: 5;
  /* transition: border .2s .1s linear; */

  display: flex;
  flex-direction: column;
}

.navigation__burger {
  width: 40px;
  height: 30px;
  font-style: normal;
  font-size: 1.2em;
  margin: 10px;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.navigation__burger--line {
  width: 24px;
  height: 4px;
  margin: 2px;

  border-radius: 10px;
  background-color: var(--secondary-color);
  transition: transform .35s  cubic-bezier(0.25, 0.46, 0.45, 0.94), 
              opacity .2s .1s;
}
.burger__active--one {
  transform: rotate(45deg) translate(6px, 6px);
  transition: transform .3s  cubic-bezier(0.25, 0.46, 0.45, 0.94);
}
.burger__active--two {
  opacity: 0;
  transition: opacity .1s;
}
.burger__active--three {
  transform: rotate(-45deg) translate(5px, -6px);
  transition: transform .3s  cubic-bezier(0.25, 0.46, 0.45, 0.94);
}

.navigation__burger__checkbox {
  position: absolute;
  top: 0px;
  left: 0px;
  margin: -100px;
  opacity: 0%;
}
.navigation__burger__checkbox:checked ~ .navigation__menu {
  display: block;
  padding-left: 2px;
}
.navigation__menu {
  display: none;
}
.navigation__menu--open {
  display: block;
  padding-left: 2px;
  padding-bottom: 10px;
  z-index: -1;
  margin-top: -226.5px;
  background: rgba(255, 255, 255, 0.9);
  animation: topSlide .5s  forwards;
}
@keyframes topSlide {
  0% {
    transform: translateY(0);
    opacity: 0;
    border-bottom: 0 solid rgba(39, 39, 39, 0.2);
  }
  50%{
    transform: translateY(120px);
    opacity: 0;
    border-bottom: 0 solid rgba(39, 39, 39, 0.2);
  }
  100% {
    transform: translateY(226.5px);
    opacity: 1;
    border-bottom: 1px solid rgba(39, 39, 39, 0.2);
  }
}
.navigation__menu--close {
  display: block;
  z-index: -1;
  margin-top: -226.5px;
  padding-left: 2px;
  padding-bottom: 10px;
  background: rgba(255, 255, 255, 0.9);
  animation: topSlideUp .9s forwards;
}
@keyframes topSlideUp {
  0% {
    transform: translateY(226.5px);
    opacity: 1;
    border-bottom: 1px solid rgba(39, 39, 39, 0.2);
  }
  25% {
    opacity: 0;
  }
  100% {
    transform: translateY(1px);
    opacity: 0;
    border-bottom: 0 solid rgba(39, 39, 39, 0.2);
  }

}
.navigation__menu__list {
  padding: 10px;
  list-style: none;
}
.navigation__menu__list__link {
  color: var(--secondary-color);
  text-decoration: none;
}
.navigation__menu__list__link:link {
  text-decoration: none;
}
.navigation__menu__list__link:hover {
  text-decoration: underline var(--secondary-color);
}
.navigation__menu__list__link:focus {
  color: var(--secondary-color);
  font-weight: bolder;
}
.navigation__menu__list__link:active {
  color: var(--secondary-color);
  font-weight: 900;
}
.navigation__logo {
  position: absolute;
  height: 50px;
  width: 200px;
  padding: 10px;
  height: 50px;

  display: flex;
  align-self: flex-end;
}
.navigation__logo__img {
  width: 100%;
  height: 100%;
}

/* Section: HERO */
.hero {
  position: relative;
  width: 100%;
  height: 100vh;
  display: flex;

  background-color: var(--pic--overlay--color);
  color: var(--basic-color);
}
.hero__img{
  position: absolute;
  width: 100%;
  height: 100vh;

  background-image: url("https://images.unsplash.com/photo-1445384763658-0400939829cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
  background-size: cover;
  background-position: center;
  z-index: -1;
}
.hero__section {
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  flex-direction: column;
}
.hero__section__content {
  margin-top: 65px;
  padding: 20px 10px;
  text-align: left;
}
.hero__title {
  margin: 0;
  font-size: 3.2em;
  line-height: 1.1;
}
.hero__subtitle {
  margin: 0px;
  font-size: 1.1em;
}
.hero__subtitle--bold{
  font-weight: bolder;
}
.hero__form {
  display: flex;
  align-items: flex-end;
  flex-direction: column;
}
.hero__lable{
  width: 100%;
  font-size: 1.1em;
  font-weight: bold;
}
.hero__label__container{
  width: 90vw;
  margin: 8px 8px 0px 0px;
  display: flex;
  flex-direction: row;
  text-align: justify;
}
.hero__input {
  height: 40px;
  font-size: 1em;
  font-family: var(--font);
  color: var(--basic-color);
  border-radius: 5px;
}
.hero__email {
  width: 100%;
  margin: 4px 4px 8px 4px;
  padding: 15px;

  border: 2px solid var(--basic-color);
  background-color: transparent;
}
.hero__email::placeholder {
  color: var(--basic-color);
}
/* ... */

